[20020108]
* mlterm with --enable-debug option can dump core owing to failure of 
  list operations. fixed. (thanks to Karl Koehler)
* ISCII / Bidi codes are more shared.
* mlterm.spec is updated (thanks to Kiyoshi Nishizawa san)
* ISCII characters in backscroll logs cannot be selected(and copyed) correctly.
  fixed.
* Window is not resized when font size is changed. fixed.
* -g option accepts minus x/y position.
* vertical tab sometimes fails. fixed.(thanks to nekoie san)
* default font size range is 6 - 30.

[20020106]
* ISCII support codes are added. (still unstable)
* INIT_PARSER short cut key is removed and "Full Rest" button is added to mlconfig. 
* when color rgb is explicitly assigned in ~/.mlterm/color , reversed color is not
  drawn correctly under Anti Alias mode. fixed. (thanks to nekoie san)
* ISO-8859-11 can be used as a -E option value.
* ~/.mlterm/vlfont is renamed to ~/.mlterm/vfont
* -V/--varlen/use_variable_length_column option is renamed to 
  -V/--varwidth/use_variable_column_width
* Kochi Mincho sample is added to etc/aafont.

[20020102]
* variable length column is supported. (-V/--verlen/use_variable_length_column option)
* DEC_SPECIAL characters are not shown under TERM=kterm and non-iso2022 encoding. fixed.

[20020102]
* selected region is reset in scrolling with dragging mouse. fixed.
* 2.1.2 is released.

[20011230]
* cursor doesn't move correctly on full width characters(critical bug!). fixed.
* If scroll commands appear with scroll region changing one by one , the number
  of redrawing screen becomes too much. fixed.
* mistake of mlterm.spec is fixed.
* 2.1.1 is released.

[20011229]
* 2.1.0 is released.

[20011229]
* compilation of src/ml_image.c fails in Solaris,HP-UX,EWS4800. fixed.
  (thanks to Sakamoto Hironori san)
* support for the sequences invoking dec-special characters is improved.
* memory leaks when combining chars are selected twice or more. fixed.

[20011228]